fix: enhance check-button styles and behavior for icon visibility

--- a/packages/openbridge-webcomponents/src/components/button/button.css
+++ b/packages/openbridge-webcomponents/src/components/button/button.css
@@ -1,5 +1,6 @@
 .wrapper {
   padding: 0;
+  user-select: none;
   background: transparent;
   height: var(--ui-components-button-touch-target-size);
   appearance: none;
